fix(tags): make sure the header doesn't overlap on iPhoneX

--- a/src/pages/tags/tags.scss
+++ b/src/pages/tags/tags.scss
@@ -1,3 +1,8 @@
 page-tags {
-
+  ion-header {
+    height: 32px;
+    background-color: #f8f8f8;
+  }
+  
+  ion-content.iphonex { margin-top: 32px; }
 }
